# serializer version: 1
# name: TestFormatSecrets.test_format_empty_secrets_json_output[0]
  dict({
    'items': list([
    ]),
    'total': 0,
  })
# ---
# name: TestFormatSecrets.test_format_empty_secrets_text_output[0]
  'No secrets found.'
# ---
# name: TestFormatSecrets.test_format_secret_no_permissions[0]
  '''
  Name: restricted_secret
  Locations: secure_location
  Scopes: None
  Permissions:
    Can Edit: No
    Can View Value: No
  
  Value: <hidden - use --show-value to display>
  
  Updated By: admin@company.com
  Updated: 2022-01-01 14:23:00
  '''
# ---
# name: TestFormatSecrets.test_format_secret_with_all_scopes[0]
  '''
  Name: multi_scope_secret
  Locations: location1, location2
  Scopes: Full Deployment, All Branch Deployments, Branch: feature-branch, Local Deployment
  Permissions:
    Can Edit: No
    Can View Value: Yes
  
  Value: <hidden - use --show-value to display>
  
  Updated By: system@company.com
  Updated: 2022-01-01 14:22:00
  '''
# ---
# name: TestFormatSecrets.test_format_secret_without_metadata[0]
  '''
  Name: simple_secret
  Locations: All code locations
  Scopes: Full Deployment
  Permissions:
    Can Edit: Yes
    Can View Value: Yes
  
  Value: <hidden - use --show-value to display>
  '''
# ---
# name: TestFormatSecrets.test_format_secrets_json_output[0]
  dict({
    'items': list([
      dict({
        'all_branch_deployments_scope': False,
        'can_edit_secret': True,
        'can_view_secret_value': True,
        'full_deployment_scope': True,
        'id': 'secret-1-uuid-12345',
        'local_deployment_scope': False,
        'location_names': list([
          'data_pipeline',
          'analytics',
        ]),
        'name': 'database_password',
        'specific_branch_deployment_scope': None,
        'update_timestamp': '2022-01-01T14:20:00',
        'updated_by': dict({
          'email': 'admin@company.com',
        }),
        'value': 'super_secret_value',
      }),
      dict({
        'all_branch_deployments_scope': True,
        'can_edit_secret': False,
        'can_view_secret_value': False,
        'full_deployment_scope': False,
        'id': 'secret-2-uuid-67890',
        'local_deployment_scope': False,
        'location_names': list([
        ]),
        'name': 'api_key',
        'specific_branch_deployment_scope': None,
        'update_timestamp': None,
        'updated_by': None,
        'value': None,
      }),
      dict({
        'all_branch_deployments_scope': False,
        'can_edit_secret': True,
        'can_view_secret_value': True,
        'full_deployment_scope': False,
        'id': 'secret-3-uuid-abcdef',
        'local_deployment_scope': True,
        'location_names': list([
          'staging_app',
        ]),
        'name': 'staging_token',
        'specific_branch_deployment_scope': 'staging',
        'update_timestamp': '2022-01-01T14:21:00',
        'updated_by': dict({
          'email': 'dev@company.com',
        }),
        'value': 'staging_value_123',
      }),
    ]),
    'total': 3,
  })
# ---
# name: TestFormatSecrets.test_format_secrets_text_output[0]
  '''
  NAME               LOCATIONS                 SCOPES                             UPDATED
  database_password  data_pipeline, analytics  Full Deployment                    2022-01-01 14:20:00
  api_key            All                       All Branch Deployments             
  staging_token      staging_app               Branch: staging, Local Deployment  2022-01-01 14:21:00
  '''
# ---
# name: TestFormatSecrets.test_format_single_secret_json_output[0]
  dict({
    'all_branch_deployments_scope': False,
    'can_edit_secret': True,
    'can_view_secret_value': True,
    'full_deployment_scope': False,
    'id': 'single-secret-uuid-xyz',
    'local_deployment_scope': True,
    'location_names': list([
      'dev_pipeline',
      'test_pipeline',
    ]),
    'name': 'development_secret',
    'specific_branch_deployment_scope': None,
    'update_timestamp': '2022-01-01 14:20:00',
    'updated_by': dict({
      'email': 'developer@company.com',
    }),
    'value': '<hidden>',
  })
# ---
# name: TestFormatSecrets.test_format_single_secret_json_output_with_value[0]
  dict({
    'all_branch_deployments_scope': False,
    'can_edit_secret': True,
    'can_view_secret_value': True,
    'full_deployment_scope': False,
    'id': 'single-secret-uuid-xyz',
    'local_deployment_scope': True,
    'location_names': list([
      'dev_pipeline',
      'test_pipeline',
    ]),
    'name': 'development_secret',
    'specific_branch_deployment_scope': None,
    'update_timestamp': '2022-01-01T14:20:00',
    'updated_by': dict({
      'email': 'developer@company.com',
    }),
    'value': 'dev_secret_value',
  })
# ---
# name: TestFormatSecrets.test_format_single_secret_text_output[0]
  '''
  Name: development_secret
  Locations: dev_pipeline, test_pipeline
  Scopes: Local Deployment
  Permissions:
    Can Edit: Yes
    Can View Value: Yes
  
  Value: <hidden - use --show-value to display>
  
  Updated By: developer@company.com
  Updated: 2022-01-01 14:20:00
  '''
# ---
# name: TestFormatSecrets.test_format_single_secret_text_output_with_value[0]
  '''
  Name: development_secret
  Locations: dev_pipeline, test_pipeline
  Scopes: Local Deployment
  Permissions:
    Can Edit: Yes
    Can View Value: Yes
  
  Value:
    dev_secret_value
  
  Updated By: developer@company.com
  Updated: 2022-01-01 14:20:00
  '''
# ---
